tests/it/wire/snapshots/it__wire__openai_responses__sends_a_json_tool_result_as_the_bare_value.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/responses",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "579"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "include": [
      "reasoning.encrypted_content"
    ],
    "input": [
      {
        "content": [
          {
            "text": "What is the weather in Paris?",
            "type": "input_text"
          }
        ],
        "role": "user"
      },
      {
        "arguments": "{\"city\":\"Paris\"}",
        "call_id": "call_weather",
        "name": "get_weather",
        "type": "function_call"
      },
      {
        "call_id": "call_weather",
        "output": "{\"sky\":\"clear\",\"temperature_c\":18}",
        "type": "function_call_output"
      }
    ],
    "max_output_tokens": 128,
    "model": "gpt-5.6-luna-2026-04-01",
    "store": false,
    "stream": false,
    "tools": [
      {
        "description": "Looks up the weather",
        "name": "get_weather",
        "parameters": {
          "properties": {},
          "type": "object"
        },
        "type": "function"
      }
    ]
  }
}
