tests/it/wire/snapshots/it__wire__openai_responses__starts_a_stream_that_never_announced_itself.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "id": null,
    "type": "started"
  },
  {
    "id": "msg_late",
    "kind": {
      "type": "text"
    },
    "type": "content_block_start"
  },
  {
    "id": "msg_late",
    "text": "No preamble.",
    "type": "text_delta"
  },
  {
    "id": "msg_late",
    "part": {
      "text": "No preamble.",
      "type": "text"
    },
    "type": "content_block_end"
  },
  {
    "id": "msg_late-item",
    "kind": {
      "kind": "openai.message",
      "type": "opaque"
    },
    "type": "content_block_start"
  },
  {
    "id": "msg_late-item",
    "part": {
      "data": {
        "content": [
          {
            "text": "No preamble.",
            "type": "output_text"
          }
        ],
        "id": "msg_late",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      },
      "kind": "openai.message",
      "type": "opaque"
    },
    "type": "content_block_end"
  },
  {
    "type": "usage",
    "usage": {
      "cache_read": 0,
      "cache_write": 0,
      "input": 0,
      "output": 0,
      "reasoning": 0
    }
  },
  {
    "response": {
      "content": [
        {
          "text": "No preamble.",
          "type": "text"
        },
        {
          "data": {
            "content": [
              {
                "text": "No preamble.",
                "type": "output_text"
              }
            ],
            "id": "msg_late",
            "role": "assistant",
            "status": "completed",
            "type": "message"
          },
          "kind": "openai.message",
          "type": "opaque"
        }
      ],
      "finish_reason": "stop",
      "id": "resp_late",
      "model": {
        "model": "gpt-5.6-luna",
        "provider": "openai"
      },
      "raw": {
        "id": "resp_late",
        "output": [],
        "status": "completed"
      },
      "usage": {
        "cache_read": 0,
        "cache_write": 0,
        "input": 0,
        "output": 0,
        "reasoning": 0
      }
    },
    "type": "completed"
  }
]
