tests/it/wire/snapshots/it__wire__openai_responses__streams_reasoning_text_and_a_tool_call.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/responses",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "204"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "gpt-5.6-luna-2026-04-01",
    "input": [
      {
        "role": "user",
        "content": [
          {
            "type": "input_text",
            "text": "Hello"
          }
        ]
      }
    ],
    "stream": true,
    "store": false,
    "include": [
      "reasoning.encrypted_content"
    ],
    "max_output_tokens": 128
  }
}
