tests/it/wire/snapshots/it__wire__openai_responses__warns_when_a_tool_result_carries_media-2.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "code": "unsupported_control",
    "message": "this provider protocol does not support non-text tool result content"
  }
]
